--- a/drehendz/src/app/index/footer/footer.component.html
+++ b/drehendz/src/app/index/footer/footer.component.html
@@ -1,124 +1,73 @@
-<!-- Footer -->
-<footer class="page-footer font-small mdb-color lighten-3 pt-4">
-
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left">
-
-      <!-- Grid row -->
-      <div class="row">
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
-
-          <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mb-4">store</h5>
-          <p>shop your favorite brands.</p>
-          <p>brands such as boohoo, primark, clarks, topman and much more....</p>
-
+<body class="d-flex flex-column">
+    <!-- For demo purpose -->
+    <div class="container-fluid flex-grow-1 flex-shrink-0">
+        <div class="px-lg-5">
+            <div class="row py-5">
+                <div class="col-lg-12 mx-auto text-white text-center">
+                    <h1 class="display-4">Tropical Clothing Brand</h1>
+                    <p class="lead mb-0">authentic and unique wear for all gender and occasion</p>
+                    <!-- <p class="lead">Snippet by <a href="https://bootstrapious.com/snippets" class="text-white">
+                            <u>Bootstrapious</u></a>
+                    </p> -->
+                </div>
+            </div>
         </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-md-none">
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <p>
-                <a href="https://drehendz.com/products/all-products">products</a>
-              </p>
-            </li>
-            <li>
-              <p>
-                <a href="info@drehendz.com">contact us</a>
-              </p>
-            </li>
-         
-            
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-md-none">
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-          <!-- Contact details -->
-          <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <p>
-                 Portmore, SC JMACE13, JA
-              </p>
-            </li>
-            <li>
-              <p>
-                info@drehendz.com
-              </p>
-            </li>
-            <li>
-              <p>
-                + 1876 830 5637
-              </p>
-            </li>
-            
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-md-none">
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
-
-          <!-- Social buttons -->
-          <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
-
-          <!-- Instagram +-->
-          <a type="button" mdbBtn floating="true" mdbWavesEffect>
-            <i class="fa fa-instagram"></i>
-
-          </a>
-
-          <!-- Facebook -->
-          <a mdbBtn floating="true" type="button"  mdbWavesEffect>
-            <i class="fa fa-facebook"></i>
-          </a>
-
-          <!-- Pinterest+-->
-          <a type="button" mdbBtn floating="true"  mdbWavesEffect>
-            <i class="fa fa-pinterest"></i>
-
-          </a>
-          <!-- Twitter -->
-          <a type="button" mdbBtn floating="true"  mdbWavesEffect >
-            <i class="fa fa-twitter"></i>
-          </a>
-          
-        
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row -->
-
     </div>
-    <!-- Footer Links -->
+    <footer class="bg-dark">
+        <div class="container py-5">
+          <div class="row py-4">
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+              <p class="font-italic text-muted">check out our social media pages on giveaways and exclusive discounts</p>
+              <ul class="list-inline mt-4">
+                <li class="list-inline-item"><a href="https://twitter.com/drehendz" target="_blank" title="twitter"><i class="fa fa-twitter"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/drehendzcom" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/drehendz__/" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.pinterest.com/drehendz/" target="_blank" title="pinterest"><i class="fa fa-pinterest"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/drehendz-com" target="_blank" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                <li class="list-inline-item"><a href="https://youtube.com/channel/UCE6c8_HUUWAcVeYZ3_poidg" target="_blank" title="youtube"><i class="fa fa-youtube"></i></a></li>
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2019-2020 
-      <a href = "mailto: info@drehendz.com"> drehendz.com</a>
-    </div>
-    <!-- Copyright -->
-
-  </footer>
-  <!-- Footer -->
+            </ul>
+            </div>
+            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+              <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
+              <ul class="list-unstyled mb-0">
+                <li class="mb-2"><a href="#" class="text-muted">For Women</a></li>
+                <li class="mb-2"><a href="#" class="text-muted">For Men</a></li>
+                <li class="mb-2"><a href="#" class="text-muted">Stores</a></li>
+                <li class="mb-2"><a href="#" class="text-muted">Our Blog</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+              <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
+              <ul class="list-unstyled mb-0">
+                <li class="mb-2"><a href="https://drehendz.com/login" class="text-muted">Login</a></li>
+                <li class="mb-2"><a href="https://drehendz.com/login" class="text-muted">Register</a></li>
+                <!-- <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li> -->
+                <li class="mb-2"><a href="/" class="text-muted">Our Products</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-lg-0">
+              <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
+              <p class="text-muted mb-4">Do you want to know more on offers and discounts subscribe to our newsletter </p>
+              <div class="p-1 rounded border">
+                <div class="input-group">
+                  <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0" >
+                  <div class="input-group-append">
+                    <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        <!-- Copyrights -->
+        <div class="bg-light py-4">
+          <div class="container text-center">
+            <p class="text-muted mb-0 py-2">© 2019-2020 Drehendz Inc. 7664 E. 2nd St. SC JMACE13 All rights reserved.</p>
+          </div>
+        </div>
+      </footer>
+    
+    </body>
+    
