--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -1,11 +1,6 @@
 <app-navbar></app-navbar>
-
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 
-<!-- <main role="main" class="container">
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
- -->
+  
 
